feat: add flag to include a comment column

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["-f", "./sample/CarMapper.java"],
+            "args": ["-f", "./sample/CarMapper.java", "-c"],
             "console": "integratedTerminal"
         }
     ]
