--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["-f", "./sample/CarMapper.java", "-c"],
+            "args": ["-f", "./sample/CarMapper.java", "-s", "From", "-t", "To", "-d", "-r", "-c", "-i"],
             "console": "integratedTerminal"
         }
     ]
