--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["-f", "./sample/CarMapper.java", "-s", "From", "-t", "To", "-d", "-r", "-c", "-i", "-j"],
+            // "args": ["-f", "./sample/CarMapper.java", "-s", "From", "-t", "To", "-d", "-r", "-c", "-i", "-j"],
+            "args": ["-y", "./config.yaml"],
             "console": "integratedTerminal"
         }
     ]
