--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${file}",
             // "args": ["-f", "./sample/CarMapper.java", "-s", "From", "-t", "To", "-d", "-r", "-c", "-i", "-j"],
-            "args": ["-y", "./config.yaml"],
+            // "args": ["-y", "./config.yaml"],
             "console": "integratedTerminal"
         }
     ]
